src/project/snapshots/pixi__project__manifest__test__remove_dependencies.snap
---
source: src/project/manifest.rs
expression: manifest.manifest.target
---
{
    PixiSpanned {
        span: Some(
            223..229,
        ),
        value: Platform(
            Win64,
        ),
    }: TargetMetadata {
        dependencies: {
            "fooz": NamelessMatchSpec {
                version: Some(
                    Any,
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
        },
        host_dependencies: None,
        build_dependencies: None,
        pypi_dependencies: None,
        activation: None,
        tasks: {},
    },
    PixiSpanned {
        span: Some(
            288..296,
        ),
        value: Platform(
            Linux64,
        ),
    }: TargetMetadata {
        dependencies: {},
        host_dependencies: None,
        build_dependencies: Some(
            {
                "fooz": NamelessMatchSpec {
                    version: Some(
                        Any,
                    ),
                    build: None,
                    build_number: None,
                    file_name: None,
                    channel: None,
                    subdir: None,
                    namespace: None,
                    md5: None,
                    sha256: None,
                },
            },
        ),
        pypi_dependencies: None,
        activation: None,
        tasks: {},
    },
}
