src/project/snapshots/pixi__project__manifest__test__remove_target_pypi_dependency.snap
---
source: src/project/manifest.rs
assertion_line: 1548
expression: manifest.parsed
---
ProjectManifest {
    project: ProjectMetadata {
        name: "pixi_fun",
        version: Some(
            Version {
                version: [[0], [0], [1], [0]],
                local: [],
            },
        ),
        description: None,
        authors: [],
        channels: [],
        platforms: PixiSpanned {
            span: Some(
                72..94,
            ),
            value: [
                Linux64,
                Win64,
            ],
        },
        license: None,
        license_file: None,
        readme: None,
        homepage: None,
        repository: None,
        documentation: None,
    },
    tasks: {},
    system_requirements: SystemRequirements {
        windows: None,
        unix: None,
        macos: None,
        linux: None,
        cuda: None,
        libc: None,
        archspec: None,
    },
    dependencies: {
        "python": NamelessMatchSpec {
            version: Some(
                Group(
                    And,
                    [
                        Range(
                            GreaterEquals,
                            Version {
                                version: [[0], [3], [12], [1]],
                                local: [],
                            },
                        ),
                        Range(
                            Less,
                            Version {
                                version: [[0], [3], [13]],
                                local: [],
                            },
                        ),
                    ],
                ),
            ),
            build: None,
            build_number: None,
            file_name: None,
            channel: None,
            subdir: None,
            namespace: None,
            md5: None,
            sha256: None,
        },
    },
    host_dependencies: None,
    build_dependencies: None,
    target: {
        PixiSpanned {
            span: Some(
                146..152,
            ),
            value: Platform(
                Win64,
            ),
        }: TargetMetadata {
            dependencies: {},
            host_dependencies: None,
            build_dependencies: None,
            pypi_dependencies: Some(
                {
                    PackageName {
                        source: "requests",
                        normalized: "requests",
                    }: PyPiRequirement {
                        version: None,
                        extras: None,
                    },
                },
            ),
            activation: None,
            tasks: {},
        },
        PixiSpanned {
            span: Some(
                238..246,
            ),
            value: Platform(
                Linux64,
            ),
        }: TargetMetadata {
            dependencies: {},
            host_dependencies: None,
            build_dependencies: None,
            pypi_dependencies: Some(
                {
                    PackageName {
                        source: "ypackage",
                        normalized: "ypackage",
                    }: PyPiRequirement {
                        version: Some(
                            VersionSpecifiers(
                                [
                                    VersionSpecifier {
                                        operator: GreaterThanEqual,
                                        version: Version {
                                            epoch: 0,
                                            release: [
                                                1,
                                                2,
                                                3,
                                            ],
                                            pre: None,
                                            post: None,
                                            dev: None,
                                            local: None,
                                        },
                                    },
                                ],
                            ),
                        ),
                        extras: None,
                    },
                },
            ),
            activation: None,
            tasks: {},
        },
    },
    activation: None,
    pypi_dependencies: None,
}
