src/project/snapshots/pixi__project__manifest__test__target_specific_tasks.snap
---
source: src/project/manifest.rs
expression: "toml_edit::de::from_str::<ProjectManifest>(&contents).expect(\"parsing should succeed!\")"
---
ProjectManifest {
    project: ProjectMetadata {
        name: "foo",
        version: Some(
            Version {
                version: [[0], [0], [1], [0]],
                local: [],
            },
        ),
        description: None,
        authors: [],
        channels: [],
        platforms: PixiSpanned {
            span: Some(
                121..123,
            ),
            value: [],
        },
        license: None,
        license_file: None,
        readme: None,
        homepage: None,
        repository: None,
        documentation: None,
    },
    tasks: {
        "test": Plain(
            "test multi",
        ),
    },
    system_requirements: SystemRequirements {
        windows: None,
        unix: None,
        macos: None,
        linux: None,
        cuda: None,
        libc: None,
        archspec: None,
    },
    dependencies: {},
    host_dependencies: None,
    build_dependencies: None,
    target: {
        PixiSpanned {
            span: Some(
                206..212,
            ),
            value: Platform(
                Win64,
            ),
        }: TargetMetadata {
            dependencies: {},
            host_dependencies: None,
            build_dependencies: None,
            pypi_dependencies: None,
            activation: None,
            tasks: {
                "test": Plain(
                    "test win",
                ),
            },
        },
        PixiSpanned {
            span: Some(
                271..279,
            ),
            value: Platform(
                Linux64,
            ),
        }: TargetMetadata {
            dependencies: {},
            host_dependencies: None,
            build_dependencies: None,
            pypi_dependencies: None,
            activation: None,
            tasks: {
                "test": Plain(
                    "test linux",
                ),
            },
        },
    },
    activation: None,
    pypi_dependencies: None,
}
